# sunset-core

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
sunset/services/: __init__.py  analytics.py  apns.py  auth.py  chat.py  email.py  llm.py  pubsub.py  retrieval.py  secrets.py  storage.py  whatsapp.py
sunset/services/analytics/: README.md  __init__.py
sunset/services/apns/: README.md
sunset/services/asr/: README.md  __init__.py
sunset/services/auth/: README.md  __init__.py
sunset/services/booking/: README.md  __init__.py
sunset/services/chat/: README.md
sunset/services/crawl/: README.md  __init__.py  base.py  firecrawl.py  playwright.py
sunset/services/duffel/: README.md  __init__.py
sunset/services/email/: README.md  __init__.py  send.py
sunset/services/google_drive/: README.md  __init__.py
sunset/services/hubspot/: README.md  __init__.py
sunset/services/instagram/: README.md  __init__.py
sunset/services/llm/: README.md  __init__.py  base.py  gemini.py  instrumentation.py  mistral.py  openai.py  openrouter.py  pricing.py  router.py  store.py  vertex.py
sunset/services/monitoring/: README.md  __init__.py
sunset/services/observability/: README.md  __init__.py  metrics.py
sunset/services/pubsub/: README.md  __init__.py
sunset/services/redis/: README.md  __init__.py  rate_limit.py
sunset/services/retrieval/: README.md  __init__.py  multimodal.py
sunset/services/secrets/: README.md  __init__.py
sunset/services/seo/: README.md  __init__.py  service.py
sunset/services/shopify/: README.md  __init__.py
sunset/services/slack/: README.md  __init__.py
sunset/services/storage/: README.md  __init__.py
sunset/services/tests/: test_chat.py  test_crawl.py  test_duffel.py  test_email_send.py
sunset/services/whatsapp/: README.md  __init__.py
sunset/services/youtube/: README.md  __init__.py
tests/: test_booking.py  test_crawl.py  test_duffel.py
