[project]
name = "sunset-core"
version = "0.1.0"
description = "🌅 Reusable async services for AI applications — auth, LLM, RAG, storage, pub/sub, and more."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Ruben Bousbib", email = "rbousbib@gmail.com" }]
keywords = ["ai", "llm", "rag", "fastapi", "async", "services", "auth", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "httpx>=0.26.0",
    "fastapi>=0.109.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "google-cloud-secret-manager>=2.18.0",
    "docling-core[chunking]>=2.0.0",
]

[project.optional-dependencies]
auth = [
    "argon2-cffi>=23.1.0",
    "pyotp>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "authlib>=1.3.0",
]
llm = [
    "google-genai>=1.0.0",
    "sentencepiece>=0.2.0",
    "openai>=1.10.0",
    "mistralai>=1.0.0,<2.0.0",
    "google-cloud-discoveryengine>=0.13.0",
]
retrieval = [
    "docling>=2.70.0",
    "google-genai>=1.0.0",
]
gcp = [
    "google-cloud-pubsub>=2.20.0",
    "google-cloud-storage>=2.14.0",
    "google-cloud-monitoring>=2.18.0",
]
analytics = [
    "posthog>=3.0.0",
]
email = [
    "resend>=2.0.0",
    "sendgrid>=6.10.0",
    "aioimaplib>=1.0.0",
]
crawl = [
    "playwright>=1.40.0",
    "markdownify>=0.13.0",
    "beautifulsoup4>=4.12.0",
    "pymupdf>=1.24.0",
    "firecrawl-py>=2.0.0",
]
redis = [
    "redis>=5.0.0",
]
asr = [
    "deepgram-sdk>=6.0.0",
]
observability = [
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-asyncpg>=0.46b0",
    "opentelemetry-instrumentation-redis>=0.46b0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
]
youtube = [
    "youtube-transcript-api>=1.0.0",
    "yt-dlp>=2024.0.0",
]
all = [
    "sunset-core[auth,llm,retrieval,gcp,analytics,email,crawl,redis,asr,youtube,observability]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "httpx>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/RubenBSB/sunset-core"
Repository = "https://github.com/RubenBSB/sunset-core"
Issues = "https://github.com/RubenBSB/sunset-core/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sunset"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]

[tool.hatch.build.targets.sdist]
only-include = ["sunset", "tests", "README.md", "LICENSE", "pyproject.toml"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: tests that hit a real external API (require credentials, skipped otherwise)",
]

[tool.ruff]
exclude = []

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
